<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceListActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:indeterminateBehavior="repeat"
            android:indeterminateDrawable="@drawable/ring_rotate"
            android:indeterminateDuration="1500"
            android:indeterminateOnly="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/title_pared_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:textColor="#fff"
            android:text="@string/pared_devices"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/paired_devices"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:stackFromBottom="true"/>

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:textColor="#fff"
            android:text="@string/other_available_devices"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/new_devices"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:stackFromBottom="true"/>

        <Button
            android:id="@+id/btn_scan"
            android:text="@string/button_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>